<resources>
    <string name="app_name">Bluetooth Irrigation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_enable_failed">Bluetooth Error.\nExiting</string>

    <string name="set_end_picker">Select End Time</string>
    <string name="set_start_picker">Select Start Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>

    <string name="end">End</string>
    <string name="generaltab">General</string>
    <string name="valve1">Valve 1</string>
    <string name="valve2">Valve 2</string>
    <string name="valve3">Valve 3</string>
    <string name="valve4">Valve 4</string>
    <string name="valve_names_dialog_title">Enter New Name</string>

    <string name="set_time">Set The Time</string>
    <string name="send_alarms">Update Arduino</string>

    <string name="title">Bluetooth Irrigation\nV2.0</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="status_connected">Status: Connected</string>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

</resources>
